--- a/src/app/widgets/filters/customer-filter/customer-filter.component.html
+++ b/src/app/widgets/filters/customer-filter/customer-filter.component.html
@@ -1,20 +1,39 @@
-<div class="filter-component">
-    <div class="white-line"></div>
-    <p class="title">{{'page.customer' | translate}}</p>
-    <div class="filter-body">
-        <div class=" p-fluid  p-grid p-formgrid">
-            <div class="p-field p-col-36 p-md-12">
-                <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="customers"
-                                (completeMethod)="filter($event)" panelStyle="panel-style"
-                                field="name"
-                                [dropdown]="true">
+<!--<div class="filter-component">-->
+<!--    <div class="white-line"></div>-->
+<!--    <p class="title">{{'page.customer' | translate}}</p>-->
+<!--    <div class="filter-body">-->
+<!--        <div class=" p-fluid  p-grid p-formgrid">-->
+<!--            <div class="p-field p-col-36 p-md-12">-->
+<!--                <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="customers"-->
+<!--                                (completeMethod)="filter($event)" panelStyle="panel-style"-->
+<!--                                field="name"-->
+<!--                                [dropdown]="true">-->
+<!--                    <ng-template let-country pTemplate="item">-->
+<!--                        <div class="country-item">-->
+<!--                            <div>{{country.name}}</div>-->
+<!--                        </div>-->
+<!--                    </ng-template>-->
+<!--                </p-autoComplete>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<div class="standard-filter">
+<div class="p-field p-col-12 p-md-12  ">
+
+<span class="p-float-label ">
+  <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="customers"
+                  (completeMethod)="filter($event)"
+                  field="name"
+                  inputId="autocomplete"
+                  [dropdown]="true">
                     <ng-template let-country pTemplate="item">
                         <div class="country-item">
                             <div>{{country.name}}</div>
                         </div>
                     </ng-template>
                 </p-autoComplete>
-            </div>
-        </div>
-    </div>
+    <label for="autocomplete">{{'page.customer' | translate}}</label>
+        </span>
+</div>
 </div>
