--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,7 +5,16 @@
     align-items: center;
 
 }
+.footer-dialog{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-self: flex-end;
 
+    width: 100%;
+    height: 40px;
+}
 .login-page{
 
     position: relative;
