--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,4 @@
+
 .login-form{
   width: 400px;
   display: flex;
@@ -53,12 +54,27 @@
   justify-content: center;
 
   flex-direction: row;
-  width: auto;
+  width: 100%;
   min-height: 600px;
-  min-width: 200px;
   height: auto;
 }
 .filter{
   display: inline-flex;
-  margin: 20px;
+  //margin: 20px;
+}
+.footer-dialog>button{
+  margin-right: 5%;
+  margin-top: 1%;
+  margin-left:5%;
+}
+
+.footer-dialog{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-self: flex-end;
+
+  width: 100%;
+  height: 40px;
 }
