--- a/src/app/table-page/table-page.component.css
+++ b/src/app/table-page/table-page.component.css
@@ -158,14 +158,12 @@ p-table {
     justify-content: center;
 
     flex-direction: row;
-    width: auto;
+    width: 100%;
     min-height: 600px;
-    min-width: 200px;
     height: auto;
 }
 .filter{
     display: inline-flex;
-    margin: 20px;
 }
 .panel-button-menu{
     z-index:10000 !important
@@ -199,4 +197,10 @@ p-table {
 
     width: 100%;
     height: 40px;
+}
+
+.footer-dialog>button{
+    margin-right: 5%;
+    margin-top: 1%;
+    margin-left:5%;
 }
