--- a/src/app/widgets/filters/date-filter/date-filter.component.css
+++ b/src/app/widgets/filters/date-filter/date-filter.component.css
@@ -11,7 +11,11 @@
     border-radius: 5px;
 
 }
-
+.data-type-stl{
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+}
 .title-d{
     background:  white;
     display: inline-block;
