--- a/src/app/widgets/filters/state-filter/state-filter.component.html
+++ b/src/app/widgets/filters/state-filter/state-filter.component.html
@@ -5,7 +5,7 @@
 
 
 <!--</div>-->
-<div class="p-fluid  p-grid p-formgrid">
+<div class="p-fluid  p-grid p-form grid">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown
                 *ngIf="onlyField"
@@ -18,23 +18,40 @@
     </div>
 </div>
 
-<div *ngIf="!onlyField" class="filter-component">
-    <div class="white-line"></div>
-    <p class="title">{{'page.status' | translate}}</p>
-    <div class="filter-body">
+<!--<div *ngIf="!onlyField" class="filter-component">-->
+<!--    <div class="white-line"></div>-->
+<!--    <p class="title">{{'page.status' | translate}}</p>-->
+<!--    <div class="filter-body">-->
 
-        <div class=" p-fluid  p-grid p-formgrid">
-            <div class="p-field p-col-36 p-md-12">
-                <p-dropdown
-                        [disabled]="disabled"
-                        (onChange)="changeState()"
-                        placeholder="{{'page.status' | translate}}"
-                        [options]="states"
-                        [(ngModel)]="stateService.stateFilterData" optionLabel="name">
-                </p-dropdown>
-            </div>
-        </div>
+<!--        <div class=" p-fluid  p-grid p-formgrid">-->
+<!--            <div class="p-field p-col-36 p-md-12">-->
+<!--                <p-dropdown-->
+<!--                        [disabled]="disabled"-->
+<!--                        (onChange)="changeState()"-->
+<!--                        placeholder="{{'page.status' | translate}}"-->
+<!--                        [options]="states"-->
+<!--                        [(ngModel)]="stateService.stateFilterData" optionLabel="name">-->
+<!--                </p-dropdown>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+
+<!--</div>-->
+
+<div  *ngIf="!onlyField" class="standard-filter">
+    <div class="p-field p-col-12 p-md-12  ">
+
+<span class="p-float-label ">
+     <p-dropdown   inputId="autocomplete" [autoDisplayFirst]="false"
+                   class="standard-filter-dropdown"
+                   [disabled]="disabled"
+                   (onChange)="changeState()"
+                   [options]="states"
+                   [(ngModel)]="stateService.stateFilterData" optionLabel="name"></p-dropdown>
+
+    <label for="autocomplete">{{'page.status' | translate}}</label>
+        </span>
     </div>
-
-
 </div>
+
