--- a/src/styles.css
+++ b/src/styles.css
@@ -19,14 +19,43 @@ body {
   transition: 0.5s;
   outline: none;
 }
+
+.p-calendar-w-btn .p-inputtext{
+
+}
 .min-size-input>.p-autocomplete-dd .p-autocomplete-input, .p-autocomplete-dd .p-autocomplete-multiple-container{
   width: 100% !important;
 }
+
+.calendar-stl{
+  padding: 0.6rem!important;
+}
+
 .p-autocomplete{
   width: 100% !important;
 
 }
+.p-field{
+ margin-bottom: 0rem!important;
+}
+.standard-filter-dropdown>.p-dropdown{
+width: 100%!important;
+}
 
+.standard-filter{
+  margin-left: 2rem;
+  margin-right: 2rem;
+  width: 25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  min-height: 7rem;
+  transition: 0.7s;
+}
+.standard-filter:hover{
+  background: #f4f4f4;
+}
 .input-text:focus {
   border: 3px solid grey;
 }
