--- a/src/app/widgets/filters/customer-filter/customer-filter.component.html
+++ b/src/app/widgets/filters/customer-filter/customer-filter.component.html
@@ -26,6 +26,7 @@
                   (completeMethod)="filter($event)"
                   field="name"
                   inputId="autocomplete"
+                  (onClear)="clear()"
                   [dropdown]="true">
                     <ng-template let-country pTemplate="item">
                         <div class="country-item">
