--- a/src/app/master-select-window/master-select-window.component.html
+++ b/src/app/master-select-window/master-select-window.component.html
@@ -5,6 +5,8 @@
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
                 (onUpdateData)="onUpdate()"
                 [confirmDisplay]="false"
+                [mainData]="tableData"
+                [statusName]="statusName"
                 (contextMenuActionUpdateData)="updateData()"
                 [masterWindowsSelectDisable]="false"
                 [buttonItems]="buttItem" [standardFilterDisable]="true"
