--- a/src/app/orders-page/orders.component.html
+++ b/src/app/orders-page/orders.component.html
@@ -2,6 +2,7 @@
                 [mainColumn]="mainColumn"
                 (onUpdateData)="updateData()"
                 [confirmDialog]="true"
+                [mainData]="tableData"
                 (onLazyLoad)="twoDownload()"
                 [contextMenuActionDisable]="false"
                 [buttonItems]="[]"
